refactor: 메서드 반환 로직 수정
collect(Collectors.toList()) -> toList()